Bug 1642195 - Library: fix hover styling for toolbar buttons in dark mode. r=dao
Differential Revision: https://phabricator.services.mozilla.com/D77608

UltraBlame original commit: ddec8a3db71bcefce1534d0877ec81bb1e3886cd

--- a/browser/themes/windows/places/organizer.css
+++ b/browser/themes/windows/places/organizer.css
@@ -1034,10 +1034,78 @@ color
 ;
 }
 #
+placesToolbar
+>
+toolbarbutton
+{
+-
+moz
+-
+appearance
+:
+none
+;
+padding
+-
+block
+:
+6px
+;
+padding
+-
+inline
+:
+7px
+;
+}
+#
+placesToolbar
+>
+toolbarbutton
+:
+not
+(
+[
+disabled
+=
+"
+true
+"
+]
+)
+:
+hover
+{
+background
+-
+color
+:
+var
+(
+-
+-
+organizer
+-
+background
+-
+color
+-
+content
+)
+;
+}
+#
 placesMenu
 >
 menu
 {
+-
+moz
+-
+appearance
+:
+none
+;
 color
 :
 var
@@ -1051,6 +1119,61 @@ text
 primary
 -
 color
+)
+;
+}
+#
+placesMenu
+>
+menu
+:
+hover
+#
+placesMenu
+>
+menu
+[
+_moz
+-
+menuactive
+=
+"
+true
+"
+]
+{
+border
+-
+color
+:
+var
+(
+-
+-
+organizer
+-
+background
+-
+color
+-
+content
+)
+;
+background
+-
+color
+:
+var
+(
+-
+-
+organizer
+-
+background
+-
+color
+-
+content
 )
 ;
 }
